--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "81ca5f62",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
     "\n",
     "# Show plot\n",
     "\n",
-    "plt.savefig('plot.png')\n",
+    "plt.savefig('plots/plot.png')\n",
     "plt.show()"
    ]
   },
