--- a/DV Project.ipynb
+++ b/DV Project.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "54136003",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
     "    destination = edge.get_destination()\n",
     "    if source in node_child_count:\n",
     "        node_child_count[source] += 1 \n",
-    "        node_childs[source].append(destination)\n",
+    "        node_childs[source].append(destination) #comment\n",
     "    \n",
     "    if destination in node_parent_count:\n",
     "        node_parent_count[destination] += 1 \n",
@@ -481,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
