--- a/radial.ipynb
+++ b/radial.ipynb
@@ -60,7 +60,7 @@
     "        G.add_edge(source, destination)\n",
     "\n",
     "    sorted_nodes = sorted(G.nodes(), key=G.degree, reverse=True)\n",
-    "    return sorted_nodes\n",
+    "    return sorted_nodes #\n",
     "\n",
     "dot_file_path = 'Datasets/LesMiserables.dot'\n",
     "sorted_nodes = nodes_sorted_by_degree(dot_file_path)\n",
