--- a/DV Project.ipynb
+++ b/DV Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "02208ea2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "012697bc",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "54136003",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f4cadf37",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "e4dbb945",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "81296203",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "e36c4791",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "75867baf",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "339b0b7a",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "ab951e04",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
     "    return node_positions,final_tree\n",
     "\n",
     "#write_ordered_dic('Datasets/LesMiserables.dot')\n",
-    "tree = BFS_tree('example.dot')[1]\n",
+    "#tree = BFS_tree('example.dot')[1]\n",
     "#tree = BFS_tree('Datasets/LesMiserables.dot')\n",
     "\n",
     "#tree = BFS_tree('new_file.dot')\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "01394dc8",
    "metadata": {},
    "outputs": [],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "0ed4202a",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "79938a94",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "5353d0d8",
    "metadata": {},
    "outputs": [],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "d0b46f68",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "6a04ccc9",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "id": "4faaf3db",
    "metadata": {},
    "outputs": [],
@@ -846,13 +846,44 @@
     "    return node_positions\n",
     "\n",
     "\n",
-    "#write_ordered_dic('Datasets/LesMiserables.dot')\n",
-    "ans = radial('example.dot')"
+    "#write_ordered_dic('Datasets/LesMiserables.dot','example.dot')\n",
+    "ans1 = radial('example.dot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
+   "id": "faca4a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import matplotlib.pyplot as plt\n",
+    "def f_plot(file):\n",
+    "    ans = hugo_radial(file)\n",
+    "    x_coords = [coord[0] for coord in ans.values()]\n",
+    "    y_coords = [coord[1] for coord in ans.values()]\n",
+    "\n",
+    "    plt.figure(figsize=(12, 12))\n",
+    "    plt.scatter(x_coords, y_coords, color='red')\n",
+    "\n",
+    "    # Add labels for each point\n",
+    "    for point, coord in ans.items():\n",
+    "        plt.text(coord[0], coord[1], f' {point}', fontsize=12, ha='right')\n",
+    "    \n",
+    "    plt.xlim(-10,10)\n",
+    "    plt.ylim(-10,10)\n",
+    "    plt.xlabel('X-axis')\n",
+    "    plt.ylabel('Y-axis')\n",
+    "    plt.title('Plot of Points')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "#f_plot('example.dot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "d267bed7",
    "metadata": {},
    "outputs": [],
@@ -920,12 +951,12 @@
     "\n",
     "\n",
     "#write_ordered_dic('Datasets/LesMiserables.dot')\n",
-    "ans = hugo_radial('example.dot')"
+    "ans2 = hugo_radial('example.dot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "56c5949e",
    "metadata": {},
    "outputs": [
@@ -946,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e5e23b56",
    "metadata": {},
    "outputs": [],
@@ -956,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "d4a8126c",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "d37771ff",
    "metadata": {},
    "outputs": [
@@ -1213,33 +1244,12 @@
     }
    ],
    "source": [
-    "#import matplotlib.pyplot as plt\n",
-    "def f_plot(file):\n",
-    "    ans = hugo_radial(file)\n",
-    "    x_coords = [coord[0] for coord in ans.values()]\n",
-    "    y_coords = [coord[1] for coord in ans.values()]\n",
-    "\n",
-    "    plt.figure(figsize=(12, 12))\n",
-    "    plt.scatter(x_coords, y_coords, color='red')\n",
-    "\n",
-    "    # Add labels for each point\n",
-    "    for point, coord in ans.items():\n",
-    "        plt.text(coord[0], coord[1], f' {point}', fontsize=12, ha='right')\n",
-    "    \n",
-    "    plt.xlim(-10,10)\n",
-    "    plt.ylim(-10,10)\n",
-    "    plt.xlabel('X-axis')\n",
-    "    plt.ylabel('Y-axis')\n",
-    "    plt.title('Plot of Points')\n",
-    "    plt.grid(True)\n",
-    "    plt.show()\n",
-    "\n",
-    "f_plot('example.dot')\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "e9a788e6",
    "metadata": {},
    "outputs": [
