solve hugo problem

--- a/DV Project.ipynb
+++ b/DV Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "02208ea2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "012697bc",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "54136003",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f4cadf37",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e4dbb945",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "81296203",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e36c4791",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "75867baf",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "339b0b7a",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ab951e04",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
     "    return node_positions,final_tree\n",
     "\n",
     "#write_ordered_dic('Datasets/LesMiserables.dot')\n",
-    "tree = BFS_tree('example.dot')[1]\n",
+    "#tree = BFS_tree('example.dot')[1]\n",
     "#tree = BFS_tree('Datasets/LesMiserables.dot')\n",
     "\n",
     "#tree = BFS_tree('new_file.dot')\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "01394dc8",
    "metadata": {},
    "outputs": [],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0ed4202a",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "79938a94",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5353d0d8",
    "metadata": {},
    "outputs": [],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d0b46f68",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6a04ccc9",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4faaf3db",
    "metadata": {},
    "outputs": [],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "faca4a1a",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d267bed7",
    "metadata": {},
    "outputs": [],
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "34c5161b",
    "metadata": {},
    "outputs": [],
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "56c5949e",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e5e23b56",
    "metadata": {},
    "outputs": [],
@@ -1002,93 +1002,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d4a8126c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root:  11 node:  2\n",
-      "root:  11 node:  3\n",
-      "root:  11 node:  4\n",
-      "root:  11 node:  12\n",
-      "root:  11 node:  13\n",
-      "root:  11 node:  14\n",
-      "root:  11 node:  15\n",
-      "root:  11 node:  16\n",
-      "root:  11 node:  24\n",
-      "root:  11 node:  25\n",
-      "root:  11 node:  26\n",
-      "root:  11 node:  27\n",
-      "root:  11 node:  28\n",
-      "root:  11 node:  29\n",
-      "root:  11 node:  30\n",
-      "root:  11 node:  32\n",
-      "root:  11 node:  33\n",
-      "root:  11 node:  34\n",
-      "root:  11 node:  35\n",
-      "root:  11 node:  36\n",
-      "root:  11 node:  37\n",
-      "root:  11 node:  38\n",
-      "root:  11 node:  39\n",
-      "root:  11 node:  44\n",
-      "root:  11 node:  45\n",
-      "root:  11 node:  49\n",
-      "root:  11 node:  50\n",
-      "root:  11 node:  52\n",
-      "root:  11 node:  56\n",
-      "root:  11 node:  59\n",
-      "root:  11 node:  65\n",
-      "root:  11 node:  69\n",
-      "root:  11 node:  70\n",
-      "root:  11 node:  71\n",
-      "root:  11 node:  72\n",
-      "root:  11 node:  73\n",
-      "root:  2 node:  1\n",
-      "root:  2 node:  5\n",
-      "root:  2 node:  6\n",
-      "root:  2 node:  7\n",
-      "root:  2 node:  8\n",
-      "root:  2 node:  9\n",
-      "root:  2 node:  10\n",
-      "root:  24 node:  17\n",
-      "root:  24 node:  18\n",
-      "root:  24 node:  19\n",
-      "root:  24 node:  20\n",
-      "root:  24 node:  21\n",
-      "root:  24 node:  22\n",
-      "root:  24 node:  23\n",
-      "root:  24 node:  31\n",
-      "root:  25 node:  42\n",
-      "root:  25 node:  43\n",
-      "root:  25 node:  51\n",
-      "root:  26 node:  40\n",
-      "root:  26 node:  41\n",
-      "root:  26 node:  76\n",
-      "root:  27 node:  55\n",
-      "root:  29 node:  46\n",
-      "root:  49 node:  47\n",
-      "root:  49 node:  58\n",
-      "root:  49 node:  60\n",
-      "root:  49 node:  61\n",
-      "root:  49 node:  62\n",
-      "root:  49 node:  63\n",
-      "root:  49 node:  64\n",
-      "root:  49 node:  66\n",
-      "root:  49 node:  67\n",
-      "root:  49 node:  74\n",
-      "root:  49 node:  75\n",
-      "root:  49 node:  77\n",
-      "root:  50 node:  57\n",
-      "root:  52 node:  53\n",
-      "root:  52 node:  54\n",
-      "root:  47 node:  48\n",
-      "root:  58 node:  68\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for subtree in tree:\n",
     "        root = subtree\n",
@@ -1099,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "4bd50b0e",
    "metadata": {},
    "outputs": [],
@@ -1171,21 +1088,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e9a788e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.141592653589793"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "math.acos(-3/3)"
    ]
@@ -1200,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "337abb08",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3dee3dc1",
    "metadata": {},
    "outputs": [],
@@ -1324,22 +1230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "26d25421",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'edges' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43medges\u001b[49m\u001b[38;5;241m.\u001b[39mget_values())\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#for node in nodes:\u001b[39;00m\n\u001b[1;32m      3\u001b[0m  \u001b[38;5;66;03m#   print(\"Node name:\", node.get_name())\u001b[39;00m\n\u001b[1;32m      4\u001b[0m   \u001b[38;5;66;03m#  print(\"Node label:\", node.get_label())\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m#print(\"Edge label:\", edge.get_label())\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m#print(\"Edge color:\", edge.get_color())\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'edges' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(edges.get_values())\n",
     "#for node in nodes:\n",
