--- a/1_DV Project.ipynb
+++ b/1_DV Project.ipynb
@@ -377,18 +377,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "id": "251fbd99",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1': (0, 0), '2': (0.0, -4), '3': (-12.0, -8), '4': (-13.5, -12), '5': (-6.0, -8), '6': (-3.0, -8), '7': (0.0, -8), '8': (3.0, -8), '9': (6.0, -8), '10': (9.0, -8), '11': (-13.5, -16), '12': (-61.5, -20), '13': (-58.5, -20), '14': (-55.5, -20), '15': (-52.5, -20), '16': (-49.5, -20), '24': (-58.5, -24), '25': (-55.5, -28), '26': (-67.5, -32), '27': (-85.5, -36), '28': (-93.0, -40), '29': (-109.5, -44), '30': (-106.5, -44), '32': (-103.5, -44), '33': (-22.5, -20), '34': (-100.5, -44), '35': (-112.5, -48), '36': (-117.0, -52), '37': (-120.0, -56), '38': (-121.5, -60), '39': (-121.5, -64), '44': (-97.5, -44), '45': (-111.0, -48), '49': (-94.5, -44), '50': (-87.0, -40), '52': (-90.0, -44), '56': (-118.5, -48), '59': (-118.5, -52), '65': (-115.5, -56), '69': (-85.5, -48), '70': (-88.5, -52), '71': (-106.5, -56), '72': (-106.5, -60), '73': (-76.5, -44), '17': (-76.5, -28), '18': (-84.0, -32), '19': (-90.0, -36), '20': (-94.5, -40), '21': (-97.5, -44), '22': (-99.0, -48), '23': (-99.0, -52), '31': (-103.5, -48), '42': (-130.5, -52), '43': (-135.0, -56), '51': (-93.0, -44), '40': (-133.5, -52), '41': (-76.5, -36), '76': (-126.0, -56), '55': (-127.5, -52), '46': (-108.0, -48), '53': (-133.5, -56), '58': (-132.0, -56), '63': (-133.5, -60), '47': (-121.5, -48), '48': (-121.5, -52), '60': (-139.5, -60), '61': (-145.5, -64), '62': (-150.0, -68), '64': (-153.0, -72), '66': (-156.0, -76), '67': (-157.5, -80), '74': (-76.5, -48), '75': (-76.5, -52), '77': (-157.5, -84), '57': (-124.5, -52), '54': (-91.5, -48), '68': (-124.5, -60)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from leafy.search import DFS\n",
     "from leafy import Graph\n",
@@ -405,16 +397,16 @@
     "    node_childs = f_childs(file)[1]\n",
     "    visited_nodes = []\n",
     "\n",
-    "    return dfs(node_positions, 1, node_childs=node_childs, count=0, visited_nodes=visited_nodes, edges=edges)\n",
+    "    return dfs(node_positions, 1, node_childs=node_childs, visited_nodes=visited_nodes, edges=edges)\n",
     "\n",
     "\n",
     "\n",
-    "def dfs(node_positions, node, node_childs, count, visited_nodes, edges, x=0, y=0):\n",
+    "def dfs(node_positions, node, node_childs, visited_nodes, edges, x=0, y=0):\n",
     "    visited_nodes.append(node)\n",
     "    parent_x, parent_y = x, y\n",
     "    \n",
-    "    step_x = 3  # Horizontal step size\n",
-    "    step_y = 4  # Vertical step size\n",
+    "    step_x = 10  # Horizontal step size\n",
+    "    step_y = 6  # Vertical step size\n",
     "\n",
     "    nchilds = len(node_childs[str(node)])\n",
     "    if nchilds == 0:\n",
@@ -428,11 +420,11 @@
     "        if child not in visited_nodes:\n",
     "            child_x = start_x + i * step_x\n",
     "            node_positions[str(child)] = (child_x, child_y)\n",
-    "            dfs(node_positions, child, node_childs, count, visited_nodes, edges, child_x, child_y)\n",
+    "            dfs(node_positions, child, node_childs, visited_nodes, edges, child_x, child_y)\n",
     "    \n",
     "    return node_positions\n",
     "\n",
-    "print(tree_layout_DFS('Datasets/LesMiserables.dot'))"
+    "#print(tree_layout_DFS('Datasets/LesMiserables.dot'))"
    ]
   },
   {
@@ -445,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "id": "75867baf",
    "metadata": {},
    "outputs": [
