--- a/layer_assignement.ipynb
+++ b/layer_assignement.ipynb
@@ -230,26 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[<pydot.core.Node object at 0x000001A7D9342C50>, <pydot.core.Node object at 0x000001A7D93ADA50>, <pydot.core.Node object at 0x000001A7D93AFAF0>, <pydot.core.Node object at 0x000001A7D9401BD0>, <pydot.core.Node object at 0x000001A7D9403C70>, <pydot.core.Node object at 0x000001A7D9361D50>, <pydot.core.Node object at 0x000001A7D9363DF0>, <pydot.core.Node object at 0x000001A7D93EDED0>, <pydot.core.Node object at 0x000001A7D93EFF70>, <pydot.core.Node object at 0x000001A7D9104430>, <pydot.core.Node object at 0x000001A7D911A050>, <pydot.core.Node object at 0x000001A7D9118190>]]\n",
-      "{<pydot.core.Node object at 0x000001A7D9342C50>: 0, <pydot.core.Node object at 0x000001A7D93ADA50>: 0, <pydot.core.Node object at 0x000001A7D93AFAF0>: 0, <pydot.core.Node object at 0x000001A7D9401BD0>: 0, <pydot.core.Node object at 0x000001A7D9403C70>: 0, <pydot.core.Node object at 0x000001A7D9361D50>: 0, <pydot.core.Node object at 0x000001A7D9363DF0>: 0, <pydot.core.Node object at 0x000001A7D93EDED0>: 0, <pydot.core.Node object at 0x000001A7D93EFF70>: 0, <pydot.core.Node object at 0x000001A7D9104430>: 0, <pydot.core.Node object at 0x000001A7D911A050>: 0, <pydot.core.Node object at 0x000001A7D9118190>: 0}\n"
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']\n",
+      "[['2', '7', '12']]\n",
+      "{'2': 0, '7': 0, '12': 0}\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'Node' and 'Node'",
+     "ename": "KeyError",
+     "evalue": "'12'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[185], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(layers)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(y_coordinates_with_height_optimization)\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node, y_coordinate \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43msorted\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43my_coordinates_with_height_optimization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m      9\u001b[0m     node_positions[node] \u001b[38;5;241m=\u001b[39m (node_positions[node][\u001b[38;5;241m0\u001b[39m],y_coordinate)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# def get_edges(node, file_name):\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m#     edge_list = []\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m#     edges = get_data(file_name)[1]\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     45\u001b[0m \n\u001b[0;32m     46\u001b[0m \u001b[38;5;66;03m#print(lay)\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'Node' and 'Node'"
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[215], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(y_coordinates_with_height_optimization)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node, y_coordinate \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(y_coordinates_with_height_optimization\u001b[38;5;241m.\u001b[39mitems()):\n\u001b[1;32m----> 9\u001b[0m     node_positions[node] \u001b[38;5;241m=\u001b[39m (\u001b[43mnode_positions\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m],y_coordinate)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_edges\u001b[39m(graph, node):\n\u001b[0;32m     13\u001b[0m     edge_list \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mKeyError\u001b[0m: '12'"
      ]
     }
    ],
@@ -265,28 +266,31 @@
     "    node_positions[node] = (node_positions[node][0],y_coordinate)\n",
     "\n",
     "\n",
+    "def get_edges(graph, node):\n",
+    "    edge_list = []\n",
+    "    for edge in graph.edges():\n",
+    "        source, dest = edge\n",
+    "        if source == node:\n",
+    "            edge_list.append(dest)\n",
+    "    return edge_list\n",
     "\n",
+    "##ADDING DUMMY NODES\n",
+    "layers_new = {}\n",
+    "for i,item in enumerate(layers):\n",
+    "    layers_new[i] = item\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# layers_new = {}\n",
-    "# for i,item in enumerate(layers):\n",
-    "#     layers_new[i] = item\n",
-    "\n",
-    "# layer_crossing_edges = {}\n",
-    "# lay = []\n",
-    "# for key in layers_new:\n",
-    "#     for value in layers_new[key]:\n",
-    "#         edges = get_edges(acyclic_graph, value)\n",
-    "#         for dest in edges:\n",
-    "#             i = 1\n",
-    "#             while dest not in layers_new[key+i]:\n",
-    "#                 lay.append({i: (value, dest)})\n",
-    "#                 layer_crossing_edges[i] = (value, dest)\n",
-    "#                 layers[key+i].append(f'd_{value,dest}')\n",
-    "#                 i = i+1\n",
+    "layer_crossing_edges = {}\n",
+    "lay = []\n",
+    "for key in layers_new:\n",
+    "    for value in layers_new[key]:\n",
+    "        edges = get_edges(graph, value)\n",
+    "        for dest in edges:\n",
+    "            i = 1\n",
+    "            while dest not in layers_new[key+i]:\n",
+    "                lay.append({i: (value, dest)})\n",
+    "                layer_crossing_edges[i] = (value, dest)\n",
+    "                layers[key+i].append(f'd_{value,dest}')\n",
+    "                i = i+1\n",
     "                \n",
     "\n",
     "\n",
