--- a/layer_assignement.ipynb
+++ b/layer_assignement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,15 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']\n",
-      "[['2', '7', '12']]\n"
+      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10']]\n"
      ]
     }
    ],
@@ -115,14 +114,6 @@
     "### LAYER ATTEMPT\n",
     "\n",
     "import pydot\n",
-    "\n",
-    "def get_incoming_edges(node, edges):\n",
-    "    incoming = []\n",
-    "    for edge in edges:\n",
-    "        if edge.get_destination() == node:\n",
-    "            incoming.append(edge.get_destination())\n",
-    "\n",
-    "    return incoming\n",
     "\n",
     "\n",
     "def get_data(dot_file_path):\n",
@@ -144,15 +135,28 @@
     "       \n",
     "    return nodes,edges,node_list,edge_list\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_incoming_edges(node, edges):\n",
+    "    incoming = []\n",
+    "    for edge in edges:\n",
+    "        if edge.get_destination() == node:\n",
+    "            incoming.append(node)\n",
+    "\n",
+    "    #print(incoming)\n",
+    "    return incoming\n",
+    "\n",
+    "\n",
     "def height_optimization(file_name):\n",
     "    layers = []  # List to store layers\n",
-    "    nodes = get_data(file_name)[0]\n",
+    "    nodes = [node.get_name() for node in  get_data(file_name)[0]]\n",
     "    edges = get_data(file_name)[1]\n",
-    "    print([node.get_name() for node in nodes])\n",
-    "    while nodes:\n",
-    "        sources = [node.get_name() for node in nodes if not list(get_incoming_edges(node.get_name(), edges))]\n",
+    "    while edges:\n",
+    "        sources = [node for node in nodes if not list(get_incoming_edges(node, edges))]\n",
     "        layers.append(sources)\n",
-    "        nodes = [node.get_name() for node in nodes if not list(sources)]\n",
+    "        nodes = [node for node in nodes if node not in sources]\n",
+    "        edges = [edge for edge in edges if edge.get_source() not in sources]\n",
     "    return layers\n",
     "\n",
     "def y_coordinate_assignment_with_height_optimization(graph):\n",
@@ -170,12 +174,12 @@
     "y_coordinates_with_height_optimization, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
     "\n",
     "print(layers)\n",
-    "#print(y_coordinates_with_height_optimization)"
+    "#print(y_coordinates_with_height_optimization)|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,27 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']\n",
-      "[['2', '7', '12']]\n",
-      "{'2': 0, '7': 0, '12': 0}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'12'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[215], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(y_coordinates_with_height_optimization)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node, y_coordinate \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(y_coordinates_with_height_optimization\u001b[38;5;241m.\u001b[39mitems()):\n\u001b[1;32m----> 9\u001b[0m     node_positions[node] \u001b[38;5;241m=\u001b[39m (\u001b[43mnode_positions\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m],y_coordinate)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_edges\u001b[39m(graph, node):\n\u001b[0;32m     13\u001b[0m     edge_list \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;31mKeyError\u001b[0m: '12'"
+      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10']]\n",
+      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '3')\", \"d_('4', '9')\", \"d_('4', '8')\", \"d_('5', '3')\", \"d_('5', '10')\", \"d_('5', '8')\", \"d_('11', '6')\"]]\n"
      ]
     }
    ],
@@ -258,49 +250,70 @@
     "#Example layer assignment\n",
     "graph = pydot.graph_from_dot_file(\"heuristic_acyc.dot\")\n",
     "y_coordinates_with_height_optimization, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
+    "edges = get_data(\"heuristic_acyc.dot\")[1]\n",
     "\n",
-    "print(layers)\n",
-    "print(y_coordinates_with_height_optimization)\n",
+    "# print(layers)\n",
+    "# print(y_coordinates_with_height_optimization)\n",
+    "# print(graph)\n",
     "\n",
-    "for node, y_coordinate in sorted(y_coordinates_with_height_optimization.items()):\n",
-    "    node_positions[node] = (node_positions[node][0],y_coordinate)\n",
+    "# for node, y_coordinate in sorted(y_coordinates_with_height_optimization.items()):\n",
+    "#     node_positions[node] = (node_positions[node][0],y_coordinate)\n",
     "\n",
     "\n",
-    "def get_edges(graph, node):\n",
+    "def get_edges(edges, node):\n",
     "    edge_list = []\n",
-    "    for edge in graph.edges():\n",
-    "        source, dest = edge\n",
+    "    for edge in edges:\n",
+    "        source = edge.get_source() \n",
+    "        dest = edge.get_destination()\n",
     "        if source == node:\n",
     "            edge_list.append(dest)\n",
     "    return edge_list\n",
+    "\n",
+    "\n",
+    "def get_incoming_edges(node, edges):\n",
+    "    incoming = []\n",
+    "    for edge in edges:\n",
+    "        if edge.get_destination() == node:\n",
+    "            incoming.append(node)\n",
+    "\n",
+    "    #print(incoming)\n",
+    "    return incoming\n",
+    "\n",
     "\n",
     "##ADDING DUMMY NODES\n",
     "layers_new = {}\n",
     "for i,item in enumerate(layers):\n",
     "    layers_new[i] = item\n",
     "\n",
+    "print(layers)\n",
     "layer_crossing_edges = {}\n",
     "lay = []\n",
     "for key in layers_new:\n",
     "    for value in layers_new[key]:\n",
-    "        edges = get_edges(graph, value)\n",
-    "        for dest in edges:\n",
+    "        edge_list = get_edges(edges, value)\n",
+    "        #print(edges)\n",
+    "        for dest in edge_list:\n",
     "            i = 1\n",
-    "            while dest not in layers_new[key+i]:\n",
-    "                lay.append({i: (value, dest)})\n",
-    "                layer_crossing_edges[i] = (value, dest)\n",
-    "                layers[key+i].append(f'd_{value,dest}')\n",
-    "                i = i+1\n",
+    "            try:\n",
+    "                while dest not in layers_new[i]:\n",
+    "                    lay.append({i: (value, dest)})\n",
+    "                    layer_crossing_edges[i] = (value, dest)\n",
+    "                    layers[key+i].append(f'd_{value,dest}')\n",
+    "                    i = i+1\n",
+    "                    #print(lay)\n",
+    "            except:\n",
+    "                continue\n",
     "                \n",
     "\n",
     "\n",
     "\n",
-    "#print(lay)\n",
-    "print(node_positions)\n",
+    "# print(lay)\n",
+    "# print(node_positions)\n",
     "print(layers)\n",
-    "nx.draw(graph,node_positions ,with_labels=True, font_weight='bold', arrowsize=20)\n",
-    "plt.grid('on')\n",
-    "plt.show()\n"
+    "#print(layer_crossing_edges)\n",
+    "#nx.draw(graph ,with_labels=True, font_weight='bold', arrowsize=20)\n",
+    "# plt.grid('on')\n",
+    "# plt.show()\n"
    ]
   },
   {
