--- a/layer_assignement.ipynb
+++ b/layer_assignement.ipynb
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10']]\n"
+      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10'], ['1', '8']]\n"
      ]
     }
    ],
@@ -157,6 +157,9 @@
     "        layers.append(sources)\n",
     "        nodes = [node for node in nodes if node not in sources]\n",
     "        edges = [edge for edge in edges if edge.get_source() not in sources]\n",
+    "        \n",
+    "    sources = [node for node in nodes if not list(get_incoming_edges(node, edges))]\n",
+    "    layers.append(sources)\n",
     "    return layers\n",
     "\n",
     "def y_coordinate_assignment_with_height_optimization(graph):\n",
@@ -174,7 +177,7 @@
     "y_coordinates_with_height_optimization, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
     "\n",
     "print(layers)\n",
-    "#print(y_coordinates_with_height_optimization)|"
+    "#print(y_coordinates_with_height_optimization)"
    ]
   },
   {
@@ -234,15 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10']]\n",
-      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '3')\", \"d_('4', '9')\", \"d_('4', '8')\", \"d_('5', '3')\", \"d_('5', '10')\", \"d_('5', '8')\", \"d_('11', '6')\"]]\n"
+      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10'], ['1', '8']]\n",
+      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '3')\", \"d_('4', '9')\", \"d_('4', '8')\", \"d_('5', '3')\", \"d_('5', '10')\", \"d_('5', '8')\", \"d_('11', '6')\"], ['1', '8', \"d_('4', '8')\", \"d_('5', '8')\", \"d_('3', '1')\", \"d_('6', '1')\", \"d_('9', '8')\", \"d_('10', '8')\"]]\n"
      ]
     }
    ],
@@ -296,8 +299,9 @@
     "            i = 1\n",
     "            try:\n",
     "                while dest not in layers_new[i]:\n",
-    "                    lay.append({i: (value, dest)})\n",
-    "                    layer_crossing_edges[i] = (value, dest)\n",
+    "                    #lay.append({i: (value, dest)})\n",
+    "                    #layer_crossing_edges[i] = (value, dest)\n",
+    "\n",
     "                    layers[key+i].append(f'd_{value,dest}')\n",
     "                    i = i+1\n",
     "                    #print(lay)\n",
