--- a/layer_assignement.ipynb
+++ b/layer_assignement.ipynb
@@ -111,8 +111,7 @@
     }
    ],
    "source": [
-    "### LAYER ATTEMPT\n",
-    "\n",
+    "##Layer assignment functions\n",
     "import pydot\n",
     "\n",
     "\n",
@@ -136,15 +135,11 @@
     "    return nodes,edges,node_list,edge_list\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "def get_incoming_edges(node, edges):\n",
     "    incoming = []\n",
     "    for edge in edges:\n",
     "        if edge.get_destination() == node:\n",
     "            incoming.append(node)\n",
-    "\n",
-    "    #print(incoming)\n",
     "    return incoming\n",
     "\n",
     "\n",
@@ -153,6 +148,7 @@
     "    nodes = [node.get_name() for node in  get_data(file_name)[0]]\n",
     "    edges = get_data(file_name)[1]\n",
     "    while edges:\n",
+    "\n",
     "        sources = [node for node in nodes if not list(get_incoming_edges(node, edges))]\n",
     "        layers.append(sources)\n",
     "        nodes = [node for node in nodes if node not in sources]\n",
@@ -165,7 +161,6 @@
     "def y_coordinate_assignment_with_height_optimization(graph):\n",
     "    height_optimization_layers = height_optimization(graph)\n",
     "    y_coordinates = {}\n",
-    "    #print(height_optimization_layers)\n",
     "    # Assign y-coordinates based on the height optimization layers\n",
     "    for layer_index, layer in enumerate(height_optimization_layers):\n",
     "        for node in layer:\n",
@@ -186,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Perform layer assignment\n",
+    "\n",
     "# layers = layer_assignment(acyclic_graph_dict)\n",
     "\n",
     "# # # Perform y-coordinate assignment based on layers\n",
@@ -237,31 +232,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10'], ['1', '8']]\n",
-      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '3')\", \"d_('4', '9')\", \"d_('4', '8')\", \"d_('5', '3')\", \"d_('5', '10')\", \"d_('5', '8')\", \"d_('11', '6')\"], ['1', '8', \"d_('4', '8')\", \"d_('5', '8')\", \"d_('3', '1')\", \"d_('6', '1')\", \"d_('9', '8')\", \"d_('10', '8')\"]]\n"
+      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '3')\", \"d_('4', '9')\", \"d_('4', '8')\", \"d_('5', '3')\", \"d_('5', '10')\", \"d_('5', '8')\", \"d_('11', '6')\"], ['1', '8']]\n"
      ]
     }
    ],
    "source": [
     "#Example layer assignment\n",
-    "graph = pydot.graph_from_dot_file(\"heuristic_acyc.dot\")\n",
-    "y_coordinates_with_height_optimization, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
-    "edges = get_data(\"heuristic_acyc.dot\")[1]\n",
-    "\n",
-    "# print(layers)\n",
-    "# print(y_coordinates_with_height_optimization)\n",
-    "# print(graph)\n",
-    "\n",
-    "# for node, y_coordinate in sorted(y_coordinates_with_height_optimization.items()):\n",
-    "#     node_positions[node] = (node_positions[node][0],y_coordinate)\n",
-    "\n",
     "\n",
     "def get_edges(edges, node):\n",
     "    edge_list = []\n",
@@ -272,53 +255,41 @@
     "            edge_list.append(dest)\n",
     "    return edge_list\n",
     "\n",
+    "y_coordinates_with_height_optimization, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
+    "edges = get_data(\"heuristic_acyc.dot\")[1]\n",
     "\n",
-    "def get_incoming_edges(node, edges):\n",
-    "    incoming = []\n",
-    "    for edge in edges:\n",
-    "        if edge.get_destination() == node:\n",
-    "            incoming.append(node)\n",
-    "\n",
-    "    #print(incoming)\n",
-    "    return incoming\n",
-    "\n",
-    "\n",
-    "##ADDING DUMMY NODES\n",
     "layers_new = {}\n",
     "for i,item in enumerate(layers):\n",
     "    layers_new[i] = item\n",
     "\n",
-    "print(layers)\n",
-    "layer_crossing_edges = {}\n",
-    "lay = []\n",
     "for key in layers_new:\n",
     "    for value in layers_new[key]:\n",
     "        edge_list = get_edges(edges, value)\n",
-    "        #print(edges)\n",
     "        for dest in edge_list:\n",
     "            i = 1\n",
-    "            try:\n",
-    "                while dest not in layers_new[i]:\n",
-    "                    #lay.append({i: (value, dest)})\n",
-    "                    #layer_crossing_edges[i] = (value, dest)\n",
+    "            while dest not in layers_new[i]:\n",
+    "                if key+i == len(layers)-1:\n",
+    "                    break\n",
+    "                layers[key+i].append(f'd_{value,dest}')\n",
+    "                i = i+1\n",
     "\n",
-    "                    layers[key+i].append(f'd_{value,dest}')\n",
-    "                    i = i+1\n",
-    "                    #print(lay)\n",
-    "            except:\n",
-    "                continue\n",
     "                \n",
     "\n",
     "\n",
     "\n",
-    "# print(lay)\n",
-    "# print(node_positions)\n",
     "print(layers)\n",
     "#print(layer_crossing_edges)\n",
     "#nx.draw(graph ,with_labels=True, font_weight='bold', arrowsize=20)\n",
     "# plt.grid('on')\n",
     "# plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -417,6 +388,10 @@
     "            \n",
     "\n",
     "# layer_crossing(acyclic_graph, node_positions, layers)\n",
+    "\n",
+    "\n",
+    "# for node, y_coordinate in sorted(y_coordinates_with_height_optimization.items()):\n",
+    "#     node_positions[node] = (node_positions[node][0],y_coordinate)\n",
     "\n",
     "\n"
    ]
