almost didnt notice i fucked everything up in the end lol

--- a/layer_assignement.ipynb
+++ b/layer_assignement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '3')\", \"d_('4', '9')\", \"d_('4', '8')\", \"d_('5', '3')\", \"d_('5', '10')\", \"d_('5', '8')\", \"d_('11', '6')\"], ['1', '8']]\n"
+      "[['2', '7', '12'], ['4', '5', '11', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('12', '9')\", \"d_('12', '10')\"], ['3', '6', '9', '10', \"d_('2', '1')\", \"d_('7', '8')\", \"d_('4', '8')\", \"d_('5', '8')\"], ['1', '8']]\n"
      ]
     }
    ],
@@ -255,27 +255,25 @@
     "            edge_list.append(dest)\n",
     "    return edge_list\n",
     "\n",
-    "y_coordinates_with_height_optimization, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
+    "\n",
+    "_, layers = y_coordinate_assignment_with_height_optimization(\"heuristic_acyc.dot\")\n",
     "edges = get_data(\"heuristic_acyc.dot\")[1]\n",
     "\n",
-    "layers_new = {}\n",
+    "layers_dict = {}\n",
     "for i,item in enumerate(layers):\n",
-    "    layers_new[i] = item\n",
+    "    layers_dict[i] = item\n",
     "\n",
-    "for key in layers_new:\n",
-    "    for value in layers_new[key]:\n",
-    "        edge_list = get_edges(edges, value)\n",
+    "for layer in layers_dict:\n",
+    "    for node in layers_dict[layer]:\n",
+    "        edge_list = get_edges(edges, node)\n",
     "        for dest in edge_list:\n",
-    "            i = 1\n",
-    "            while dest not in layers_new[i]:\n",
-    "                if key+i == len(layers)-1:\n",
-    "                    break\n",
-    "                layers[key+i].append(f'd_{value,dest}')\n",
-    "                i = i+1\n",
+    "            step = 1\n",
+    "            while dest not in layers_dict[layer + step] :\n",
+    "                layers[layer+step].append(f'd_{node,dest}')\n",
+    "                step += 1\n",
+    "\n",
     "\n",
     "                \n",
-    "\n",
-    "\n",
     "\n",
     "print(layers)\n",
     "#print(layer_crossing_edges)\n",
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
